Add some more explanation

--- a/p1_navigation/Navigation.ipynb
+++ b/p1_navigation/Navigation.ipynb
@@ -284,6 +284,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Observe a trained agent \n",
+    "Instead of training the agent from scratch, you can also just load a set of weights for your agent to use.\n",
+    "In this case, the agent plays three episodes and reports its scores for comparison."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
